--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -19,7 +19,10 @@
 
 .avatar {
   display: flex;
-  max-width: 30%;
+  max-width: 50%;
+  border-radius: 5px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .profileName {
@@ -61,11 +64,33 @@
   font-size: 2rem;
   color: #8a8b8e;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .profileTag:hover {
   color: #2196f3;
 }
+
+.profileLocation {
+    position: relative;
+    cursor: pointer;
+}
+
+.profileLocation::after {
+    display: block;
+	position: absolute;
+	left: 0; 
+	width: 0;
+	height: 2px; 
+	background-color: #2196f3;
+	content: "";
+	transition: width 0.3s ease-out;
+}
+
+.profileLocation:hover::after {
+    width: 100%;
+}
+
 
 .stats {
   width: 100%;
