--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -31,7 +31,6 @@
   margin-bottom: 0.5rem;
   font-weight: bold;
   font-size: 2.5rem;
-  cursor: pointer;
 }
 
 .profileName::before {
@@ -107,13 +106,13 @@
   padding: 1rem 0;
   font-size: 1.5rem;
   text-align: center;
-  border-top: 1px solid #d3d5e3;
+  border-top: 1px solid #d1d2d9;
   background-color: rgba(241, 241, 241, 0.833);
 }
 
 .viewsList {
-  border-left: 1px solid #d3d5e3;
-  border-right: 1px solid #d3d5e3;
+  border-left: 1px solid #d1d2d9;
+  border-right: 1px solid #d1d2d9;
 }
 
 .followersList {
